// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AptoSelect Renders Component 1`] = `
<div
  aria-expanded="false"
  class="ui selection dropdown"
  role="listbox"
  tabindex="0"
>
  <div
    aria-live="polite"
    class="text"
    role="alert"
  />
  <i
    aria-hidden="true"
    class="dropdown icon"
  />
  <div
    class="menu transition"
  >
    <div
      aria-checked="true"
      aria-selected="true"
      class="active selected item"
      role="option"
      style="pointer-events: all;"
    >
      <span
        class="text"
      >
        Choose
      </span>
    </div>
    <div
      aria-checked="false"
      aria-selected="false"
      class="item"
      role="option"
      style="pointer-events: all;"
    >
      <span
        class="text"
      >
        Item 1
      </span>
    </div>
  </div>
</div>
`;

exports[`AptoSelect Renders Component with name/value 1`] = `
<div
  aria-expanded="false"
  class="ui selection dropdown"
  name="hi"
  role="listbox"
  tabindex="0"
>
  <div
    aria-live="polite"
    class="text"
    role="alert"
  />
  <i
    aria-hidden="true"
    class="dropdown icon"
  />
  <div
    class="menu transition"
  >
    <div
      aria-checked="false"
      aria-selected="true"
      class="selected item"
      role="option"
      style="pointer-events: all;"
    >
      <span
        class="text"
      >
        Choose
      </span>
    </div>
    <div
      aria-checked="false"
      aria-selected="false"
      class="item"
      role="option"
      style="pointer-events: all;"
    >
      <span
        class="text"
      >
        Item 1
      </span>
    </div>
  </div>
</div>
`;

exports[`AptoSelect Renders disabled 1`] = `
<div
  aria-disabled="true"
  aria-expanded="false"
  class="ui disabled selection dropdown"
  name="hi"
  role="listbox"
  tabindex="-1"
>
  <div
    aria-live="polite"
    class="text"
    role="alert"
  />
  <i
    aria-hidden="true"
    class="dropdown icon"
  />
  <div
    class="menu transition"
  >
    <div
      aria-checked="false"
      aria-selected="true"
      class="selected item"
      role="option"
      style="pointer-events: all;"
    >
      <span
        class="text"
      >
        Choose
      </span>
    </div>
    <div
      aria-checked="false"
      aria-selected="false"
      class="item"
      role="option"
      style="pointer-events: all;"
    >
      <span
        class="text"
      >
        Item 1
      </span>
    </div>
  </div>
</div>
`;
